kubernates/circuit-breaker/circuit-breaker-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-bff-circuit-breaker
  namespace: goty-pdn
spec:
  host: backend-bff
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 1m
      baseEjectionTime: 15m
      maxEjectionPercent: 50
    retries:
      attempts: 2
      perTryTimeout: 2s
